- Sidebar will widen on larger screens - Lightened `goldenrod` font to `gold` for better contrast - Reduced spacing and corrected non-uniform space under the image in a card pop-up - Minor style changes to the modal

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  color: goldenrod;
+  color: gold;
   padding: 0;
   overflow-y: hidden;
   margin: 0;
