--- a/src/game/zones/PlayerHand.module.css
+++ b/src/game/zones/PlayerHand.module.css
@@ -53,7 +53,7 @@
 .arsenal {
   background-color: rgba(0, 0, 0, 0.5);
   border: goldenrod solid 1px;
-  color: goldenrod;
+  color: gold;
   border-radius: 5px;
   width: auto;
   height: auto;
